# ComputacaoGrafica

./: .clang-format  CMakeLists.txt  README.md
include/: glad.c
include/glad/: glad.h
shaders/: all.s  diffuse.s  fragment.s  specular.s  vertex.s
src/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
